@@ -269,18 +269,18 @@ class TableView {
                 /**
                  * Creates a new uninitialised iterator.
                  */
-                iterator() = default;
+                constexpr iterator() = default;
                 /**
                  * Creates a copy of the given iterator.
                  */
-                iterator(const iterator&) = default;
+                constexpr iterator(const iterator&) = default;
 
                 /**
                  * Makes this a copy of the given iterator.
                  *
                  * \return a reference to this iterator.
                  */
-                iterator& operator = (const iterator&) = default;
+                constexpr iterator& operator = (const iterator&) = default;
 
                 /**
                  * Compares this with the given iterator for equality.
@@ -290,7 +290,7 @@ class TableView {
                  * subarray/element of the underlying table, or \c false
                  * if they do not.
                  */
-                bool operator == (const iterator& rhs) const {
+                constexpr bool operator == (const iterator& rhs) const {
                     return current_ == rhs.current_;
                 }
 
@@ -299,7 +299,7 @@ class TableView {
                  *
                  * \return a reference to this iterator after the increment.
                  */
-                iterator& operator ++ () {
+                constexpr iterator& operator ++ () {
                     ++current_;
                     return *this;
                 }
@@ -309,7 +309,7 @@ class TableView {
                  * \return a copy of this iterator before the increment took
                  * place.
                  */
-                iterator operator ++ (int) {
+                constexpr iterator operator ++ (int) {
                     iterator prev(*this);
                     ++current_;
                     return prev;
@@ -319,7 +319,7 @@ class TableView {
                  *
                  * \return a reference to this iterator after the decrement.
                  */
-                iterator& operator -- () {
+                constexpr iterator& operator -- () {
                     --current_;
                     return *this;
                 }
@@ -329,7 +329,7 @@ class TableView {
                  * \return a copy of this iterator before the decrement took
                  * place.
                  */
-                iterator operator -- (int) {
+                constexpr iterator operator -- (int) {
                     iterator prev(*this);
                     --current_;
                     return prev;
@@ -352,7 +352,7 @@ class TableView {
                  *
                  * \return the corresponding subarray or table element.
                  */
-                Subview operator * () const {
+                constexpr Subview operator * () const {
                     return *current_;
                 }
 
@@ -361,7 +361,7 @@ class TableView {
                  * Creates a new iterator pointing to the given
                  * subarray/element of the underlying table.
                  */
-                iterator(Subarray* s) : current_(s) {}
+                constexpr iterator(Subarray* s) : current_(s) {}
 
             friend class TableView;
         };
@@ -403,7 +403,7 @@ class TableView {
          *
          * \return a reference to this table view.
          */
-        TableView& operator = (const TableView&) = default;
+        constexpr TableView& operator = (const TableView&) = default;
 
         /**
          * Returns the size of this array, across all of the array dimensions.
@@ -467,7 +467,7 @@ class TableView {
          *
          * \return an iterator at the beginning of this table.
          */
-        const_iterator begin() const {
+        constexpr const_iterator begin() const {
             return iterator(array_);
         }
         /**
@@ -488,7 +488,7 @@ class TableView {
          *
          * \return an iterator beyond the end of this table.
          */
-        const_iterator end() const {
+        constexpr const_iterator end() const {
             return array_ + dim1;
         }
 #ifdef __APIDOCS
@@ -512,7 +512,7 @@ class TableView {
          *
          * \return an iterator over the subarrays or elements of this table.
          */
-        auto __iter__() const;
+        constexpr auto __iter__() const;
 #endif
         /**
          * Determines whether this and the given table view are accessing
